# 3_beadando_sudoku

./: CMakeCache.txt  CMakeLists.txt  GAME_OVER1szerk.txt  Makefile  a.kep  cmake_install.cmake  helloworld  helloworld.cpp  kurzor1szerk.txt  main-2.cpp  menu_widget.cpp  menu_widget.h  number_widget.cpp  number_widget.h  repuloszerk1.txt  robbanas1szerk.txt  start.sh  start1szerk.txt  string_widget.cpp  string_widget.h  sudoku_game.cpp  sudoku_game.h  sudoku_grafika.cpp  sudoku_grafika.h  test_graphics  ufo1szerk.txt  widget.cpp  widget.h
